bad/assign_new_array_bool_string.example_compiler_output
ERROR
[1mbad/assign_new_array_bool_string.lat:4:17: [1;31merror: [0;1mleft side is not assignable[m
	new boolean[3] = "";
	               [1;32m^[m
[1mbad/assign_new_array_bool_string.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	new boolean[3] = "";
	[1;32m^[m
